--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root{
     --primary: #198754;
     --grey-black: #111111;
@@ -41,6 +46,45 @@
 .inner-hero-buttons a:hover{
     background-color: var(--white);
     color: var(--orange);
+}
+/* our product */
+.product-section{}
+.filter-list{
+    padding-left: 0;
+    display: flex;
+    text-align: center;
+    margin-bottom: 15px;
+}
+.filter-list li{
+    margin: 0 auto;
+    list-style: none;
+    background-color: #eee;
+    padding: 8px 20px;
+    margin: 5px;
+    letter-spacing: 1px ;
+    cursor: pointer;
+}
+.filter-list li.active{
+    background-color: var(--orange);
+    color: #fff;
+}
+.product{
+    display: flex;
+    flex-wrap: wrap;
+}
+.product .item-box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 5px;
+}
+.product .item-box img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* latest news */
