--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,9 +48,13 @@
     color: var(--orange);
 }
 /* swiper slider */
-.swiper{
+/* .swiper{
     width: 80%;
     height: fit-content;
+} */
+.swiper {
+  width: 600px;
+  height: 300px;
 }
 .swiper-slide{}
 .swiper-slide img{
@@ -60,42 +64,76 @@
 
 /* our product */
 .product-section{}
+.inner-section{
+    margin-bottom: 20px;
+}
+.inner-section h2{}
+.inner-section p{}
 .filter-list{
     padding-left: 0;
     display: flex;
     text-align: center;
-    margin-bottom: 15px;
+    margin: 15px 300px;
+
 }
-.filter-list li{
+.filter-list li {
     margin: 0 auto;
     list-style: none;
     background-color: #eee;
-    padding: 8px 20px;
+    padding: 5px 23px;
     margin: 5px;
-    letter-spacing: 1px ;
+    letter-spacing: 1px;
     cursor: pointer;
+    border-radius: 10px;
 }
 .filter-list li.active{
     background-color: var(--orange);
     color: #fff;
 }
 .product{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
 }
 .product .item-box{
     position: relative;
-    width: 300px;
+    width: 100%;
     height: 300px;
-    margin: 5px;
+    transition: .6s;
+    cursor: pointer;
+    box-shadow: 3px 3px 25px -1px rgba(0,0,0,0.44);
+}
+.product .item-box:hover .heart-icon, .product .item-box:hover .inner-btn a{
+    visibility: visible;
 }
 .product .item-box img{
-    position: absolute;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.card-body .heart-icon{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 30px;
+    visibility: hidden;
+    color: var(--orange);
+}
+.card-body .inner-btn  a{
+    background-color: var(--orange);
+    color: var(--white);
+    padding: 8px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 82px;
+    visibility: hidden;
+}
+.inner-btn{
+    position: absolute;
+    left: 0;
+    top: 130px;
 }
 
 /* latest news */
